force-app/main/default/objects/Pipeline__c/Pipeline__c.object-meta.xml
<CustomObject>
    <label>Pipeline Snapshot</label>
    <nameField>
        <label>Pipeline Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pipeline Snapshots</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>