force-app/main/default/objects/Pipeline__c/fields/Lifetime_Volume__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Volume__c</fullName>
    <label>Lifetime Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>