force-app/main/default/objects/Pipeline__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pipeline Snapshots</relationshipLabel>
    <relationshipName>Pipelines</relationshipName>
    <type>Lookup</type>
</CustomField>