force-app/main/default/objects/Pipeline__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <label>Opportunity Product</label>
    <length>25</length>
    <type>Text</type>
</CustomField>