force-app/main/default/objects/Pipeline__c/fields/TLR_Amount__c.field-meta.xml
<CustomField>
    <fullName>TLR_Amount__c</fullName>
    <label>TLR Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>