force-app/main/default/objects/Pipeline__c/fields/Total_Opportunities_Old__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunities_Old__c</fullName>
    <label>Total Opportunities (Old)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>