force-app/main/default/objects/Pipeline__c/fields/Type_of_Device__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Device__c</fullName>
    <label>Type of Device</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>car</fullName>
            </value>
            <value>
                <fullName>phone</fullName>
            </value>
            <value>
                <fullName>pmp</fullName>
            </value>
            <value>
                <fullName>iptv</fullName>
            </value>
            <value>
                <fullName>smartbook</fullName>
            </value>
            <value>
                <fullName>embedded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>